# rataclaude

./: Cargo.toml  README.md
src/: action.rs  app.rs  event.rs  main.rs  tui.rs
src/filebrowser/: mod.rs  operations.rs  panel.rs  state.rs
src/git/: diff.rs  mod.rs  operations.rs  repo.rs  status.rs
src/input/: handler.rs  keymap.rs
src/pty/: manager.rs  mod.rs  terminal_emulator.rs
src/ui/: command_bar.rs  diff_view.rs  file_browser_pane.rs  file_panel.rs  git_pane.rs  layout.rs  mod.rs  prompt_dialog.rs  pty_pane.rs  status_list.rs  syntax.rs  tab_bar.rs
src/ui/syntaxes/: Swift.sublime-syntax
