[package]
name = "rataclaude"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
nix = { version = "0.29", features = ["term", "process", "fs"] }
vt100 = "0.15"
git2 = "0.19"
notify = "7"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
syntect = { version = "5", default-features = false, features = ["default-fancy", "regex-fancy"] }
